kafka/base/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"addresses":["95.111.234.12"],"port":80,"protocol":"HTTP","serviceName":"kafka:kafka-ui","ingressName":"kafka:kafka-ui","hostname":"kafka-ui.abu7midan.com","path":"/","allNodes":false}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"kafka-ui","namespace":"kafka"},"spec":{"ingressClassName":"nginx","rules":[{"host":"kafka-ui.abu7midan.com","http":{"paths":[{"backend":{"service":{"name":"kafka-ui","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-02-12T14:37:21Z"
    generation: 2
    name: kafka-ui
    namespace: kafka
    resourceVersion: "5033555"
    uid: d1a96ef8-2d63-4113-b647-ab1f76b6ff2a
  spec:
    ingressClassName: nginx
    rules:
    - host: kafka-ui.abu7midan.com
      http:
        paths:
        - backend:
            service:
              name: kafka-ui
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 95.111.234.12
kind: List
metadata:
  resourceVersion: ""
