kafka/base/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":32615,"protocol":"TCP","serviceName":"kafka:my-kafka-brokers-0","allNodes":true}]'
    creationTimestamp: "2026-02-12T14:32:51Z"
    labels:
      app.kubernetes.io/instance: my-kafka
      app.kubernetes.io/managed-by: strimzi-cluster-operator
      app.kubernetes.io/name: kafka
      app.kubernetes.io/part-of: strimzi-my-kafka
      strimzi.io/cluster: my-kafka
      strimzi.io/component-type: kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
      strimzi.io/pool-name: brokers
    name: my-kafka-brokers-0
    namespace: kafka
    ownerReferences:
    - apiVersion: kafka.strimzi.io/v1beta2
      blockOwnerDeletion: true
      controller: false
      kind: KafkaNodePool
      name: brokers
      uid: 88381bb1-0e01-4e9a-a44c-5ffedb62239e
    resourceVersion: "6201666"
    uid: 88a9947b-4129-4406-b09f-4fc643c279b9
  spec:
    clusterIP: 10.106.241.8
    clusterIPs:
    - 10.106.241.8
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-external
      nodePort: 32615
      port: 9094
      protocol: TCP
      targetPort: tcp-external
    selector:
      strimzi.io/cluster: my-kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
      strimzi.io/pod-name: my-kafka-brokers-0
      strimzi.io/pool-name: brokers
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":30539,"protocol":"TCP","serviceName":"kafka:my-kafka-brokers-1","allNodes":true}]'
    creationTimestamp: "2026-02-12T14:32:51Z"
    labels:
      app.kubernetes.io/instance: my-kafka
      app.kubernetes.io/managed-by: strimzi-cluster-operator
      app.kubernetes.io/name: kafka
      app.kubernetes.io/part-of: strimzi-my-kafka
      strimzi.io/cluster: my-kafka
      strimzi.io/component-type: kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
      strimzi.io/pool-name: brokers
    name: my-kafka-brokers-1
    namespace: kafka
    ownerReferences:
    - apiVersion: kafka.strimzi.io/v1beta2
      blockOwnerDeletion: true
      controller: false
      kind: KafkaNodePool
      name: brokers
      uid: 88381bb1-0e01-4e9a-a44c-5ffedb62239e
    resourceVersion: "6201667"
    uid: 3976e723-84b3-4dfe-a101-cc402a21a2f9
  spec:
    clusterIP: 10.103.33.91
    clusterIPs:
    - 10.103.33.91
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-external
      nodePort: 30539
      port: 9094
      protocol: TCP
      targetPort: tcp-external
    selector:
      strimzi.io/cluster: my-kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
      strimzi.io/pod-name: my-kafka-brokers-1
      strimzi.io/pool-name: brokers
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":31726,"protocol":"TCP","serviceName":"kafka:my-kafka-brokers-2","allNodes":true}]'
    creationTimestamp: "2026-02-12T14:32:51Z"
    labels:
      app.kubernetes.io/instance: my-kafka
      app.kubernetes.io/managed-by: strimzi-cluster-operator
      app.kubernetes.io/name: kafka
      app.kubernetes.io/part-of: strimzi-my-kafka
      strimzi.io/cluster: my-kafka
      strimzi.io/component-type: kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
      strimzi.io/pool-name: brokers
    name: my-kafka-brokers-2
    namespace: kafka
    ownerReferences:
    - apiVersion: kafka.strimzi.io/v1beta2
      blockOwnerDeletion: true
      controller: false
      kind: KafkaNodePool
      name: brokers
      uid: 88381bb1-0e01-4e9a-a44c-5ffedb62239e
    resourceVersion: "6201668"
    uid: a30d7bdc-c177-43c8-b578-ea13424af0d1
  spec:
    clusterIP: 10.107.65.129
    clusterIPs:
    - 10.107.65.129
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-external
      nodePort: 31726
      port: 9094
      protocol: TCP
      targetPort: tcp-external
    selector:
      strimzi.io/cluster: my-kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
      strimzi.io/pod-name: my-kafka-brokers-2
      strimzi.io/pool-name: brokers
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      strimzi.io/discovery: |-
        [ {
          "port" : 9092,
          "tls" : false,
          "protocol" : "kafka",
          "auth" : "none"
        }, {
          "port" : 9094,
          "tls" : false,
          "protocol" : "kafka",
          "auth" : "none"
        } ]
    creationTimestamp: "2026-02-12T14:32:51Z"
    labels:
      app.kubernetes.io/instance: my-kafka
      app.kubernetes.io/managed-by: strimzi-cluster-operator
      app.kubernetes.io/name: kafka
      app.kubernetes.io/part-of: strimzi-my-kafka
      strimzi.io/cluster: my-kafka
      strimzi.io/component-type: kafka
      strimzi.io/discovery: "true"
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
    name: my-kafka-kafka-bootstrap
    namespace: kafka
    ownerReferences:
    - apiVersion: kafka.strimzi.io/v1beta2
      blockOwnerDeletion: true
      controller: false
      kind: Kafka
      name: my-kafka
      uid: 2f4ace1b-eded-4ed3-8750-f4a99bb1cbad
    resourceVersion: "6201657"
    uid: 64ee6330-a1d2-404f-9b44-ecb3ac084b64
  spec:
    clusterIP: 10.97.37.110
    clusterIPs:
    - 10.97.37.110
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-replication
      port: 9091
      protocol: TCP
      targetPort: tcp-replication
    - name: tcp-clients
      port: 9092
      protocol: TCP
      targetPort: tcp-clients
    selector:
      strimzi.io/broker-role: "true"
      strimzi.io/cluster: my-kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-02-12T14:32:51Z"
    labels:
      app.kubernetes.io/instance: my-kafka
      app.kubernetes.io/managed-by: strimzi-cluster-operator
      app.kubernetes.io/name: kafka
      app.kubernetes.io/part-of: strimzi-my-kafka
      strimzi.io/cluster: my-kafka
      strimzi.io/component-type: kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
    name: my-kafka-kafka-brokers
    namespace: kafka
    ownerReferences:
    - apiVersion: kafka.strimzi.io/v1beta2
      blockOwnerDeletion: true
      controller: false
      kind: Kafka
      name: my-kafka
      uid: 2f4ace1b-eded-4ed3-8750-f4a99bb1cbad
    resourceVersion: "6201660"
    uid: ed15deb7-e3e7-45e8-ba57-ad01bba5340f
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-ctrlplane
      port: 9090
      protocol: TCP
      targetPort: tcp-ctrlplane
    - name: tcp-replication
      port: 9091
      protocol: TCP
      targetPort: tcp-replication
    - name: tcp-kafkaagent
      port: 8443
      protocol: TCP
      targetPort: tcp-kafkaagent
    - name: tcp-clients
      port: 9092
      protocol: TCP
      targetPort: tcp-clients
    publishNotReadyAddresses: true
    selector:
      strimzi.io/cluster: my-kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      field.cattle.io/publicEndpoints: '[{"port":30234,"protocol":"TCP","serviceName":"kafka:my-kafka-kafka-external-bootstrap","allNodes":true}]'
    creationTimestamp: "2026-02-12T14:32:51Z"
    labels:
      app.kubernetes.io/instance: my-kafka
      app.kubernetes.io/managed-by: strimzi-cluster-operator
      app.kubernetes.io/name: kafka
      app.kubernetes.io/part-of: strimzi-my-kafka
      strimzi.io/cluster: my-kafka
      strimzi.io/component-type: kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
    name: my-kafka-kafka-external-bootstrap
    namespace: kafka
    ownerReferences:
    - apiVersion: kafka.strimzi.io/v1beta2
      blockOwnerDeletion: true
      controller: false
      kind: Kafka
      name: my-kafka
      uid: 2f4ace1b-eded-4ed3-8750-f4a99bb1cbad
    resourceVersion: "6201663"
    uid: 92c31171-6c54-426b-bf5a-0c32f3b4a42c
  spec:
    clusterIP: 10.110.21.151
    clusterIPs:
    - 10.110.21.151
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-external
      nodePort: 30234
      port: 9094
      protocol: TCP
      targetPort: tcp-external
    selector:
      strimzi.io/broker-role: "true"
      strimzi.io/cluster: my-kafka
      strimzi.io/kind: Kafka
      strimzi.io/name: my-kafka-kafka
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
